--- a/playpage/insrtuction.css
+++ b/playpage/insrtuction.css
@@ -2,20 +2,40 @@ body {
     background-image: url("https://cdn3.vectorstock.com/i/1000x1000/04/47/board-template-with-nature-theme-background-vector-29930447.jpg");
     background-repeat: no-repeat;
     background-size: 100%;
+    width: 100vw;
+    height: 100vh;
 }
 .instructions{
-    margin-left: 25%;
+    margin-left: 22%;
     color: white;
     font-size: 40px;
     font-style: italic;
     font-weight: 400;
     margin-top: 10%;
-    line-height: 50px;
-    position: fixed;
+    line-height: 0px;
+    display: flex;
+    flex-direction: column;
+    height: 3px;
+    justify-content: space-between;
 }
 .btns{
     display: flex;
     align-items: center;
     justify-content: space-between;
     text-align: center;
+}
+@media screen and (max-width: 600px) and (max-height: 100vh) {
+    .instructions{
+        margin-left: 22%;
+        color: white;
+        font-size: 20px;
+        font-style: italic;
+        font-weight: 400;
+        margin-top: 10%;
+        line-height: 0px;
+        display: flex;
+        flex-direction: column;
+        height: 3px;
+        justify-content: space-between;
+    }
 }
