--- a/playpage/play.css
+++ b/playpage/play.css
@@ -17,17 +17,17 @@ body {
 
 }
 .LEADERBOARD{
-    margin-left: 71%;
+    margin-left: 60%;
 }
 .LEADERBOARD .details{
-margin-top: -50%;
-margin-left: 30%;
+margin-top: -45%;
+margin-left: 25%;
 }
 .details{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    height: 130px;
+    height: 110px;
     width: 130px;
 }
 input{
@@ -35,7 +35,7 @@ input{
     border-style: none;
     border-radius: 10px;
     color: white;
-    height: 40px;
+    height: 30px;
 }
 .LEADERBOARD h3{
     margin-top: -15%;
@@ -44,8 +44,8 @@ input{
 .tigerimage img {
     width: 12%;
     height: 12%;
-    margin-top: 5%;
-    margin-left: 24%;
+    margin-top: 2.5%;
+    margin-left: 23%;
 }
 
 .playbtn {
@@ -72,4 +72,38 @@ a {
     font-weight: 400;
     /* transform: rotate(200.534deg); */
 
+}
+@media screen and (max-width: 600px) and (max-height: 100vh) {
+    background-image{
+        transform: rotate(-90deg);
+    }
+    .details{
+        display: none;
+    }
+    .LEADERBOARD{
+        display: none;
+    }
+    .tigerimage img{
+        margin-top: 19%;
+        margin-left: 23%;
+    }
+    .playbtn {
+        display: flex;
+        align-items: center;
+        border: 1px solid none;
+        width: 100px;
+        position: relative;
+        margin-left: 75%;
+        margin-top: 3%;
+        color: white;
+        font-size: 10px;
+    }
+    svg{
+        width: 30px;
+
+    }
+    .instruction{
+        font-size: 20px;
+        margin-top: -2%;
+    }
 }
