--- a/playpage/play.css
+++ b/playpage/play.css
@@ -12,32 +12,34 @@ body {
 
     /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
 }
-.LEADERBOARD img{
-    width: 350px;
 
+.LEADERBOARD {
+    margin-left: 300px;
+    margin-top: 50px;
 }
-.LEADERBOARD{
-    margin-left: 60%;
+
+.LEADERBOARD .details {
+    margin-top: -45%;
+    margin-left: 25%;
 }
-.LEADERBOARD .details{
-margin-top: -45%;
-margin-left: 25%;
-}
-.details{
+
+.details {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     height: 110px;
     width: 130px;
 }
-input{
+
+input {
     background-color: #2A6338;
     border-style: none;
     border-radius: 10px;
     color: white;
     height: 30px;
 }
-.LEADERBOARD h3{
+
+.LEADERBOARD h3 {
     margin-top: -15%;
     margin-left: 11%;
 }
@@ -68,20 +70,25 @@ a {
     /* transform: rotate(200.534deg); */
 
 }
+
 @media screen and (max-width: 600px) and (max-height: 100vh) {
-    background-image{
+    background-image {
         transform: rotate(-90deg);
     }
-    .details{
+
+    .details {
         display: none;
     }
-    .LEADERBOARD{
+
+    .LEADERBOARD {
         display: none;
     }
-    .tigerimage img{
+
+    .tigerimage img {
         margin-top: 19%;
         margin-left: 23%;
     }
+
     .playbtn {
         display: flex;
         align-items: center;
@@ -93,11 +100,13 @@ a {
         color: white;
         font-size: 10px;
     }
-    svg{
+
+    svg {
         width: 30px;
 
     }
-    .instruction{
+
+    .instruction {
         font-size: 20px;
         margin-top: -2%;
     }
