--- a/gameover.css
+++ b/gameover.css
@@ -51,6 +51,16 @@ button:hover{
     font-style: italic;
     border-radius: 40px;
 }
+.LEADERBOARD{
+    background-color: green;
+    margin-top: -200px;
+    width: 200px;
+    font-family:monospace;
+    color: white;
+    margin-left: 20px;
+    padding: 10px;
+    border-radius: 30px;
+}
 @media screen and (max-width: 600px) and (max-height: 100vh) {
     background-image{
         transform: rotate(-90deg);
