--- a/playpage/play.css
+++ b/playpage/play.css
@@ -52,7 +52,7 @@ input {
     width: 100px;
     position: relative;
     margin-left: 75%;
-    margin-top: 31%;
+    margin-top: 500px;
     color: white;
 }
 
