--- a/game.css
+++ b/game.css
@@ -16,7 +16,7 @@ body {
     height: 100vh;
 }
 
-.dino {
+.Deer {
     background-image: url('assests/derr mage wthout background.png');
     background-repeat: no-repeat;
     background-size: cover;
@@ -25,9 +25,10 @@ body {
     position: absolute;
     bottom: 0;
     left: 52px;
+    animation: Deer 0.6s linear;
 }
 
-.obstacle {
+.Cheetah {
     width: 180px;
     height: 120px;
     background-image: url('assests/depositphotos_494581100-stock-illustration-animal-character-funny-cheetah-cartoon-fotor-bg-remover-2023110592021.png');
@@ -59,7 +60,7 @@ body {
     border-radius: 10px;
 }
 
-@keyframes dino {
+@keyframes Deer {
     0% {
         bottom: 0;
     }
@@ -79,14 +80,17 @@ body {
         left: -10vw;
     }
 }
-.animateDino{
-    animation: dino 0.6s linear;
+
+.animateDeer {
+    animation: Deer 0.9s infinite;
 }
-@media screen and  (max-width: 600px) and (max-height: 100vh){
-    background-image {
-        transform: rotate(-90deg)
-    };
-    .dino {
+
+@media screen and (max-width: 600px) and (max-height: 100vh) {
+    .gameContainer {
+        background-image: none; /* Remove background image on smaller screens */
+    }
+
+    .Deer {
         background-image: url('assests/derr mage wthout background.png');
         background-repeat: no-repeat;
         background-size: cover;
@@ -96,6 +100,7 @@ body {
         bottom: 0;
         left: 52px;
     }
+
     #scoreCont {
         font-size: 10px;
         color: #54212f;
