--- a/game.css
+++ b/game.css
@@ -36,7 +36,7 @@ body {
     position: absolute;
     bottom: 0;
     left: 100%; /* Start the obstacle outside the window */
-    animation: obstacleAni 5s linear infinite;
+    animation: cheetahAni 5s linear infinite;
 }
 
 .gameOver {
@@ -72,7 +72,7 @@ body {
     }
 }
 
-@keyframes obstacleAni {
+@keyframes cheetahAni {
     0% {
         left: 100%;
     }
